View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033487 | Community | OCCT:Data Exchange | public | 2023-09-22 14:22 | 2023-09-22 14:54 |
Reporter | pavelmoje | Assigned To | pavelmoje | ||
Priority | normal | Severity | major | ||
Status | new | Resolution | open | ||
Platform | Windows | OS | VC++ 2022 | ||
Product Version | 7.7.1 | ||||
Summary | 0033487: Read specific STEP file with unresolved references caused Exception Access Violation when Transfer() is called | ||||
Description | Call STEPCAFControl_Reader->Transfer() caused exception Access Violation when file has Unresolved Reference, see occt_bug3.PNG. Other attached files occt_bug[1, 2, 4].PNG shows other exception details. | ||||
Steps To Reproduce | Read STEP file with Unresolved Reference (occt_bug3.PNG) and use STEPCAFControl_Reader. I've to ask my college if I can provide this file. | ||||
Additional information and documentation updates | When I've set STEPCAFControl_Reader.SetColorMode(false) file is normally read. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Dear @pavelmoje please reattache a files. There was some problem with attachemtns |
|
Bug is fixed and PR is created https://github.com/Open-Cascade-SAS/OCCT/pull/13. |
|
Missing attached files. occt_bug5.PNG (16,061 bytes) occt_bug4.PNG (39,358 bytes) occt_bug3.PNG (17,108 bytes) occt_bug2.PNG (92,422 bytes) occt_bug1.PNG (39,039 bytes) |
|
Attached occt_bug5.PNG is from CAD Assistant. And see loaded model with applied PR https://github.com/Open-Cascade-SAS/OCCT/pull/13. loaded_model_after_fix.jpg (133,409 bytes) |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-09-22 14:22 | pavelmoje | New Issue | |
2023-09-22 14:22 | pavelmoje | Assigned To | => pavelmoje |
2023-09-22 14:24 | dpasukhi | Note Added: 0114252 | |
2023-09-22 14:41 | pavelmoje | Note Added: 0114254 | |
2023-09-22 14:42 | pavelmoje | Note Added: 0114255 | |
2023-09-22 14:42 | pavelmoje | File Added: occt_bug5.PNG | |
2023-09-22 14:42 | pavelmoje | File Added: occt_bug4.PNG | |
2023-09-22 14:42 | pavelmoje | File Added: occt_bug3.PNG | |
2023-09-22 14:42 | pavelmoje | File Added: occt_bug2.PNG | |
2023-09-22 14:42 | pavelmoje | File Added: occt_bug1.PNG | |
2023-09-22 14:54 | pavelmoje | Note Added: 0114256 | |
2023-09-22 14:54 | pavelmoje | File Added: loaded_model_after_fix.jpg |