0033487: Data Exchange, Step Import - Unresolved reference crashes

IsNull() check added for Handle(StepVisual_FillAreaStyleColour).